--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 \usepackage{hyperref}
 
 \title{DS250 (DAV) Class Module}
-\author{DR.GAGAN RAJ GUPTA} 
+\author{KARTIK PANDEY} 
 \date{January 2025}
 
 \begin{document}
